text input is misaligned when `align-content` is set to `center` https://bugs.webkit.org/show_bug.cgi?id=292730 <rdar://problem/151026614>

Reviewed by Antti Koivisto.

'Align-content' applies to "block containers, multicol containers, flex containers, and grid containers".
https://drafts.csswg.org/css-align/#align-justify-content
and input elements are not part of those.

* LayoutTests/fast/block/align-content-on-input-incorrect-expected.html: Added.
* LayoutTests/fast/block/align-content-on-input-incorrect.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutBlock):

Canonical link: https://commits.webkit.org/294750@main